...
            android:padding="10dp"
            android:text="Step :"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lstSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"></android.support.v7.widget.RecyclerView>

    </LinearLayout>

...
